# micromouse

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: devlog_02_28_2018.md  devlog_10_16.md  devlog_10_20.md  milestones.md  pic32-config.md  potential_problems.md
include/core/maze/: maze.h
include/micromouse/: config.h
include/micromouse/core/: floodfill.h  maze.h  path.h  pid.h
include/micromouse/core/maze/: maze.h  parser.h
include/micromouse/core/pathplanning/: coord.h  directions.c  directions.h  floodfill.h  path.h
include/micromouse/pic/: adc.h  ble.h  ble_api.h  motor_control.h  procs.h  pwm.h  qei.h  utils.h
include/micromouse/pic/components/: encoder.h  led.h  motor.h  oscillator.h  sensor.h
include/micromouse/sim/: base.h  controls.h  display.h
include/micromouse/sim/procedures/: explore.h  speedrun.h
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-hardware_test.mk  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
src/: global_config.h  main.c  pic_main.c  sim_main.c
src/base/: maze.c  maze.h
src/core/: default_map.data  floodfill.c  global_config.h  maze.c  path.c  pid.c
src/core/astar/: .gitkeep
src/core/floodfill/: floodfill.c
src/core/maze/: maze.c  maze.h  parser.c
src/core/pathplanning/: coord.c  directions.c  floodfill.c  path.c
src/drivers/: pic_hardware_test.c  pic_main.c  sim_main.c
src/floodfill/: floodfill.h
src/pic/: .gitkeep  adc.c  ble.c  ble_api.c  motor_control.c  procs.c  pwm.c  qei.c  utils.c
src/pic/components/: encoder.c  led.c  motor.c  oscillator.c  sensor.c
src/sim/: base.c  controls.c  default_sim_maze.data  display.c  gen_maze.py
src/sim/procedures/: explore.c  speedrun.c
tests/: CMakeLists.txt  check-coord.c  check-directions.c  check-floodfill.c  check-maze-parser.c  check-maze.c  check-path.c
tests/maps/: wrong_size_map.data
utils/: pid_controller_sim.py
